tests/negative/neg_pr1162_removed_aliased.safe
package neg_PR1162_Removed_Aliased

   value : aliased integer = 1;
